# projects

./: .gitignore  LICENSE  README.md
DbAssistant/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIRST_COMMIT.md  HOW_TO_USE.md  LAUNCH_PLAN.md  MODULES.md  README.md  SECURITY.md  api.py  conDbUi.py  dbtool.py  install.bat  install.sh  pyproject.toml  pytest.ini  run.bat  run.sh  run_api.bat  run_cli.bat  shipper.sh  uninstall.bat  uninstall.command  uninstall.sh
DbAssistant/ai_assistant/: __init__.py
DbAssistant/ai_query/: __init__.py  __main__.py  agent.py  ai_query_ui.py  ai_query_workspace.py  ai_settings_ui.py  api.py  auto_execute_orchestrator.py  cli.py  config.ini.example  cross_tab_orchestrator.py  manifest.py  module_config.py  pii_masker.py  prompt_assembly.py  requirements-llm.txt  requirements.txt  response_parser.py  run_ai_query_assistant.sh  service.py  session_manager.py  shell_menu.sh  sql_execution_rules.py  sql_execution_service.py  sql_modes.py  sql_table_refs.py  sql_validation.py  standalone.py  summary_sql_validator.py  token_meter.py
DbAssistant/app/: dbtool.py
DbAssistant/common/: __init__.py  autocommit.py  branding.py  charset_util.py  concurrency.py  config_loader.py  connection_manager.py  connection_params.py  database_registry.py  db_capabilities.py  db_manager.py  editions.py  layout_migration.py  notifications.py  paths.py  secret_store.py  sql_guard.py  sql_splitter.py  ssh_tunnel.py  ssl_connect.py  tzutil.py
DbAssistant/docs/: ADDING_FEATURES.md  CONFIG_REFERENCE.md  HOWTORUN.md  PRODUCTION_READINESS.md  QUICKSTART.md  RAG.md  README.md  UI_ARCHITECTURE.md
DbAssistant/monitoring/: __init__.py  __main__.py  api.py  cli.py  cloud_monitor_base.py  cloud_provider_registry.py  daemon.py  db_metric_config.py  db_os_collector.py  manifest.py  metrics_visualizer.py  monitor_aws.py  monitor_azure.py  monitor_config.ini  monitor_config.ini.example  monitor_config.py  monitor_connection_manager.py  monitor_db_connection_manager.py  monitor_gcp.py  monitor_settings_ui.py  monitor_thresholds.ini  monitor_thresholds.ini.example  monitoring_ui.py  monitoring_utils.py  requirements.txt  run_monitor.sh  send_notification.py  service.py  shell_menu.sh  standalone.py  stop.py  threshold_checker.py
DbAssistant/schema_converter/: __init__.py  __main__.py  adapters.py  api.py  bridge.py  charset.py  cli.py  compare_options.py  config.ini.example  converter.py  manifest.py  migration_report.py  migration_validation.py  migrator_settings_ui.py  module_config.py  parallel_transfer.py  requirements.txt  run_schema_converter.sh  schema_converter_ui.py  schema_full.py  service.py  shell_menu.sh  standalone.py  table_naming.py  transfer_options.py  type_overrides.py  ui.py
DbAssistant/scripts/: build_edition.py  e2e_migration_dropdown_test.py  live_smoke_matrix.py  manual_generate_e2e.py  manual_token_efficiency_e2e.py  sync_public_repo.sh
DbAssistant/setup/: __init__.py  install.bat  install.py  install.sh  module_manifest.py  requirements-api.txt  requirements-cloud.txt  requirements-core.txt  requirements-drivers.txt  requirements-full.txt  requirements-ui.txt  requirements.txt  run.sh  setup.py  shipper.py  uninstall.py
DbAssistant/tests/: ISSUES_FOUND.md  TEST_SUMMARY.md  TEST_TYPE_REFERENCE.md  _exhaustive_api.py  _exhaustive_cli.py  _exhaustive_ui.py  _generate_test_summary.py  _live_integration_log.txt  _smoke_uninstall.py  _ui_widget_interactions.py  conftest.py  full_live_report.txt  integration_helpers.py  live_integration_report.txt  run_column_rename_parity_live.py  run_full_live_suite.py  run_live_integration.py  run_live_web_connections.py  run_migration_unicode_live.py  run_monitoring_live_full.py  run_sql_modes_ai_cursor_report.py  run_sql_modes_live_report.py  test_additional_suite.py  test_ai_capture.py  test_ai_meters.py  test_ai_oneshot_cli.py  test_ai_query_agent.py  test_ai_query_cancel_shutdown.py  test_ai_query_parity.py  test_ai_readonly_guard.py  test_ai_response_parser.py  test_ai_sessions.py  test_api_keys.py  test_app_builder_advisor_gate.py  test_app_builder_agent_runner.py  test_app_builder_ai_channels.py  test_app_builder_assistant.py  test_app_builder_boot_regression.py  (+177 more)
(+405 files in other folders)
