[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbassistant"
description = "Production-grade database management tool: AI query assistance, data migration, monitoring, and an app builder — with full Desktop / TUI / Web / CLI / REST API parity."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Dhananjay Chaturvedi" }]
keywords = [
    "database", "sql", "migration", "monitoring", "ai", "nl2sql",
    "rag", "llm", "postgres", "mysql", "oracle", "sqlserver", "mongodb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]

# Base install is intentionally tiny (pure-Python core). Database drivers,
# cloud SDKs, the REST API/Web UI server, the TUI, and the local LLM extras
# are opt-in via the extras below (or the per-module requirement files in
# setup/). This mirrors the modular installer (`bash install.sh --module ...`).
dependencies = [
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
    "sqlparse>=0.4.0",
    "pygments>=2.15.0",
]

[project.optional-dependencies]
# Database drivers (one bundle; install only what your engines need).
drivers = [
    "mysql-connector-python>=8.0.0",
    "psycopg2-binary>=2.9.0",
    "pymssql>=2.2.0",
    "pymongo>=4.6.0",
    "oracledb>=2.0.0",
]
# Cloud monitoring SDKs (AWS / Azure / GCP).
cloud = [
    "boto3>=1.26.0",
    "botocore[crt]>=1.26.0",
    "google-api-python-client>=2.70.0",
    "google-auth>=2.20.0",
    "google-cloud-monitoring>=2.11.0",
    "azure-identity>=1.14.0",
    "azure-mgmt-sql>=1.0.0",
    "azure-mgmt-monitor>=2.0.0",
    "azure-mgmt-mysqlflexibleservers>=1.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-postgresqlflexibleservers>=1.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-web>=7.0.0",
]
# REST API + Web UI server.
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
# Terminal UI (Tkinter desktop UI ships with system Python).
ui = ["textual>=0.80.0", "textual-serve>=1.0.0"]
# Optional local NL->SQL LLM engines and semantic RAG embeddings.
# (The default `python` LLM engine and hashing RAG embedder need none of these.)
llm = ["numpy>=1.24", "torch>=2.0", "sqlglot>=25.0", "sentence-transformers>=2.2.0"]
# Developer tooling.
dev = ["pytest>=7.4.0", "black>=23.0.0", "flake8>=6.0.0", "pylint>=3.0.0", "mypy>=1.5.0"]
# Everything except dev.
all = [
    "dbassistant[drivers,cloud,api,ui,llm]",
]

[project.scripts]
dbtool = "app.dbtool:main"
dbassistant = "common.ui.launcher:launch_desktop_ui"
dbassistant-cli = "app.dbtool:main"
dbassistant-api = "api:main"

[project.urls]
Homepage = "https://github.com/dhananjay-chaturvedi/dbassistant"
Documentation = "https://dhananjay-chaturvedi.github.io/dbassistant/"
Repository = "https://github.com/dhananjay-chaturvedi/dbassistant"
Issues = "https://github.com/dhananjay-chaturvedi/dbassistant/issues"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools]
py-modules = ["dbtool", "conDbUi"]

[tool.setuptools.packages.find]
include = [
    "app*", "common*", "schema_converter*", "ai_query*",
    "monitoring*", "ai_assistant*",
]
exclude = ["tests*", "built_apps*", "website*", "docs*", "setup*", "scripts*", "tools*"]

[tool.setuptools.package-data]
"*" = [
    "*.ini.example", "*.ini",
    "common/ui/web/static/*",
    "common/ui/web/static/**/*",
]

[tool.pylint.design]
max-args = 10
max-positional-arguments = 10
